Added updated index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html>
     <head>
         <title>My first website !</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Hello Github!</h1>
-        <h2>This is my first test on github.</h2>
+        <div id = "top">
+            <h1 style = "color:crimson;text-align: center;"><span class ="name">Hello Github!</span></h1>
+            <h2 style = "color:darkmagenta;text-align: center;"><span class ="name">This is my first test on github.</span></h2>
+            <h3>External css style</h3>
+        </div>
+        <div id = "middle"><span class ="name">Middle Section</span>
+            <table>
+                <tr>
+                    <th>Batch</th>
+                    <th>Roll No</th>
+                    <th>Email</th>
+                </tr>
+                <tr>
+                    <td>072</td>
+                    <td>014</td>
+                    <td>kushalghimire61@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>073</td>
+                    <td>015</td>
+                    <td>kushalghimire@gmail.com</td>
+                </tr>
+                <tr>
+                    <td>074</td>
+                    <td>016</td>
+                    <td>kushalghimire6@gmail.com</td>
+                </tr>
+            </table>
+            <br>
+            <form>
+                Enter your fullname : <input type="text" placeholder="Full Name" name="name">
+                <button>Submit</button>
+            </form>
+        </div>
+        <div id = "bottom">
+            <h1><span class ="name">This is a bottom section.</span></h1>
+        </div>
     </body>
 </html>
